Added mobility to paddles

--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
 		<div class="game-wrapper">
 			<h1>Pong</h1>
 			<div id="game"></div>
-			<!-- Rough-out your SVG mark-up here to start... -->
+			<!--<svg x="0px" y="0px" width="512" height="256" viewBox="0 0 512 256">
+			<rect x="0" y="0" width="512" height="256" fill="#353535"/>
+			<line stroke-dasharray="20, 15" x1="256" y1="0" x2="256" y2="256" stroke="white" stroke-width="4px" />
+			<circle cx="256" cy="128" r="8" fill="white" stroke="white" />
+			<rect height="56" width="8" fill="white" x="494" y="100" />
+			<rect height="56" width="8" fill="white" x="10" y="100" />
+			<text x="206" y="30" font-size="35" fill="white">0</text>
+			<text x="281" y="30" font-size="35" fill="white">0</text>
+			</svg>-->
 		</div>
 		<script type="text/javascript" src="build/bundle.js"></script>
 	</body>
