--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 	<title>Pong</title>
 </head>
 
-<body>
+<body background="./public/images/streetfighter.jpg">
 	<div class="game-wrapper">
-		<h1>Pong Fighter</h1>
+		<h1>Pong Fighters</h1>
 		<div id="game"></div>
 		<div class="game-info">
 			<div>
@@ -18,9 +18,10 @@
 			</div>
 			<div>
 				<p>Spacebar = Pause Game</p>
-				<audio id="background_audio" autoplay="autoplay">
+				<p>v = 1 energy ball</p>
+				<!--<audio id="background_audio" autoplay="autoplay">
 					<source src="./public/sounds/ryu_theme.mp3" />
-				</audio>
+				</audio>-->
 				<a href="#noscroll" id="mute">toggle sound</a>
 			</div>
 			<div>
