--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 			<div>
 				<p>Spacebar = Pause Game</p>
 				<p>v = 1 energy ball</p>
-				<!--<audio id="background_audio" autoplay="autoplay">
+				<audio id="background_audio" autoplay="autoplay">
 					<source src="./public/sounds/ryu_theme.mp3" />
-				</audio>-->
+				</audio>
 				<a href="#noscroll" id="mute">toggle sound</a>
 			</div>
 			<div>
