Added paddle toggle trigger

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 			<div>
 				<p>Spacebar = Pause Game</p>
 				<p>v = 1 energy ball</p>
+				<p>b = toggle paddle </p>
 				<audio id="background_audio" autoplay="autoplay">
 					<source src="./public/sounds/ryu_theme.mp3" />
 				</audio>
