--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Pong</title>
+	<link rel="icon" href="./favicon.ico" type="image/png" />
+    <link rel="shortcut icon" href="./favicon.ico" type="image/png" />
 </head>
 
 <body background="./public/images/streetfighter.jpg">
